Fix the header issue on visibility.

--- a/src/app/components/reviews/reviews.component.css
+++ b/src/app/components/reviews/reviews.component.css
@@ -1,4 +1,8 @@
-
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(151, 116, 116);
+}
 .prev {
   cursor: pointer;
   position: relative;
@@ -7,7 +11,6 @@
   color: black;
   font-size: larger;
 }
-
 .next {
   cursor: pointer;
   float: right;
@@ -17,8 +20,7 @@
   color: black;
   font-size: larger;
 }
-
-@media (min-width:320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .section-heading h2 {
     margin-top: 115px !important;
   }
@@ -31,18 +33,13 @@
     right: 3px;
   }
 }
-
-@media (max-width:303px) {
-  .section-heading h2{
+@media (max-width: 303px) {
+  .section-heading h2 {
     margin-top: 120px !important;
   }
 }
-
-@media (max-width:767px){
-
-  .review_no_data_found{
+@media (max-width: 767px) {
+  .review_no_data_found {
     width: 70%;
   }
-
 }
-
